# TheLiftKata

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Call.cpp  Call.h  Command.h  Lift.cpp  Lift.h  LiftAction.h  LiftCall.h  Request.cpp  Request.h  Scheduler.cpp  Scheduler.h  main.cpp
test/: CMakeLists.txt  CallTest.cpp  RequestTest.cpp  SchedulerTest.cpp  main_test.cpp
